# SA-MP-MySQL

./: .gitmodules  CMakeLists.txt  a_mysql.inc.in
src/: CCallback.cpp  CCallback.hpp  CMakeLists.txt  COrm.cpp  COrm.hpp  CQueryFile.cpp  CQueryFile.hpp  main.cpp  misc.hpp  natives.cpp  natives.hpp  types.hpp
